# hqtfim-neel-cat

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
code/: __init__.py  hqtfim_compare.py
paper/: hqtfim_neel_cat.tex
tests/: __init__.py  test_hqtfim_compare.py
