[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hqtfim-neel-cat"
version = "0.1.0"
description = "Hierarchical quantum Ising model vs standard TFIM: Neel cat structure and entanglement comparison."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Anass Gaoual"}
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/AnassGaroual/hqtfim-neel-cat"
